crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__negative_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-42.9\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Float=>Float@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Float("-42.9")

[=== formatted below ===]

