crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__negative_in_apply_def_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a=A\n -g a\na\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (*
            UpperIdent=>UpperIdent@2
            InlineApply=>UpperIdent@2
            (* Ident=>LowerIdent@4 EndUnaryMinus)
            InlineApply=>LowerIdent@4
            Ident=>LowerIdent@5
        EndApply)
    EndAssign)
    HintExpr
    Ident=>LowerIdent@6
EndTopLevelDecls)

[=== canfmt below ===]
Assign("a", Apply(UpperIdent("A"), [UnaryOp(Minus, Ident("g")), Ident("a")]))
Ident("a")

[=== formatted below ===]

