crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__negative_int_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-42\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("-42")

[=== formatted below ===]

