crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__nested_def_without_newline_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x =\n    a : n\n    4\n_\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock
                (BeginTypeOrTypeAlias
                    Ident=>LowerIdent@2
                    InlineTypeColon=>OpColon@3
                    Ident=>LowerIdent@4
                EndTypeOrTypeAlias)
                HintExpr
                Num=>IntBase10@5
            EndBlock)
        EndAssign)
        HintExpr
        Underscore=>Underscore@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign("x", Block([TypeAlias(Ident("a"), Name("n")), IntBase10("4")]))
Underscore("_")

[=== formatted below ===]

