crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__nested_if_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "if t1 then\n    1\nelse if t2 then\n    2\nelse\n    3\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginIf
        Ident=>LowerIdent@1
        InlineKwThen=>KwThen@2
        (BeginBlock HintExpr Num=>IntBase10@3 EndBlock)
        InlineKwElse=>KwElse@4
        Ident=>LowerIdent@6
        InlineKwThen=>KwThen@7
        (BeginBlock HintExpr Num=>IntBase10@8 EndBlock)
        InlineKwElse=>KwElse@9
        (BeginBlock HintExpr Num=>IntBase10@10 EndBlock)
    EndIf)
EndTopLevelDecls)

[=== canfmt below ===]
If([(Ident("t1"), Block([IntBase10("1")])), (Ident("t2"), Block([IntBase10("2")]))], Block([IntBase10("3")]))

[=== formatted below ===]

