crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__nested_module_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "interface Foo.Bar.Baz exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        (* (* ModuleName=>UpperIdent@1 DotModuleUpperIdent) DotModuleUpperIdent)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

